--- a/resources/sass/components/_home-main.scss
+++ b/resources/sass/components/_home-main.scss
@@ -77,6 +77,7 @@
   @media screen and (min-width: breakpoint('desktop')) {
     display: block;
     width: 31.25rem;
+    text-align: right;
   }
 }
 
